--- a/views/game.jade
+++ b/views/game.jade
@@ -6,6 +6,6 @@ html
     link(rel='javascript', href='/lib/require.min.js')
     script(data-main='js/client.js', src='lib/require.min.js')
   body
-    h1= title
-    p Welcome to #{title}
-    #area
+    svg#arena(version="1.1", xmlns:xlink="http://www.w3.org/1999/xlink", xmlns="http://www.w3.org/2000/svg")
+      rect#arenaborder(x=20, y=20, width=772, height=500, stroke='blue', stroke-width=2, fill='none')
+      rect#gateleft(x=4, y=243, width=16, height=54, stroke='blue', stroke-width=2, fill='none')
